--- a/web-app/package.json
+++ b/web-app/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@material-ui/core": "^4.11.4",
     "next": "10.2.2",
+    "next-runtime-dotenv": "^1.4.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
