--- a/web-app/package.json
+++ b/web-app/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.11.4",
+    "js-cookie": "^2.2.1",
     "next": "10.2.2",
     "next-runtime-dotenv": "^1.4.0",
     "react": "17.0.2",
