--- a/server/.env.example
+++ b/server/.env.example
@@ -1,3 +1,10 @@
 DB_PASSWORD=
 DB_USER=
 PORT=3005
+
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+apiVersion=2006-03-01
+BUCKET_NAME=
+
+EXPIRY=3600
