--- a/server/package.json
+++ b/server/package.json
@@ -11,11 +11,13 @@
   "author": "dinanjana",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.913.0",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongoose": "^5.12.10",
+    "multer": "^1.4.2",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
